sumo/tests/duarouter/routes/style2_input/errors/vehicle_false_arrivalspeed/errors.duarouter
Error: Invalid arrivalSpeed definition for vehicle '0'
Quitting (on error).
